@@ -1,3 +1,5 @@
+27-Jan-2016 Fixes #115. Trying to set the Windows character set in a patch for a subset of a module's source files is not supported in the VSSolution build mode. This is because the setting is project wide. An exception is now thrown if this is encountered. The workaround is to apply the patch to all the source files.
+
 19-Jan-2016 Missing toolchain packages and incorrectly spelt toolchain overrides now report how to fix the problem.
 
 13-Jan-2016 ======== Version 1.0.1b1 Release ========
